# gloc

./: CMakeLists.txt  README.md  package.xml
data/: README.txt  box.txt  cov_lm.txt  cov_lm_m.txt  cov_lm_mm.txt  cov_lm_mm1.txt  cov_lm_mm_s2.txt  cov_lm_mm_s3.txt  cov_lm_mm_u.txt  cov_xy_mm.txt  cov_xy_mm1.txt  cov_xy_mm_s2.txt  cov_xy_mm_s3.txt  cov_xy_mm_u.txt  draw_ellipse.py  lm_result.txt  lm_result_s1.txt  lm_result_s2.txt  lm_result_s3.txt  lm_result_u.txt  x_result.txt  x_result_s2.txt  x_result_s3.txt  x_result_u.txt
data/figure/: fig1a.xcf  fig2a.xcf  fig3a.xcf  fig4a.xcf  fig5a.xcf  fig6a.xcf  fig7a.xcf
data1/: README.txt  README_ICINCO22.txt  box.txt  box10.txt  box11.txt  box12.txt  box13.txt  box14.txt  box15.txt  box16.txt  box17.txt  box18.txt  box19.txt  box2.txt  box21.txt  box22.txt  box3.txt  box4.txt  box5.txt  box6.txt  box7.txt  box8.txt  box9.txt  cov_lm.txt  cov_lm1.txt  cov_lm10.txt  cov_lm11.txt  cov_lm12.txt  cov_lm13.txt  cov_lm14.txt  cov_lm15.txt  cov_lm16.txt  cov_lm17.txt  cov_lm18.txt  cov_lm19.txt  cov_lm2.txt  cov_lm20.txt  cov_lm21.txt  cov_lm23.txt  cov_lm24.txt  (+69 more)
data1/figure/: fig4.xcf  fig5.xcf  fig6.xcf  fig7.xcf
data2/: README.txt  box1.txt  box2.txt  cov_lm1.txt  cov_lm2.txt  cov_x1.txt  cov_x2.txt  draw_ellipse2.py  lm1.txt  lm2.txt  lm_result.txt  readdata.py  x1.txt  x2.txt  x_result.txt
figure/: README.txt  box_s3.txt  cov_xy.txt  cov_xy_m.txt  draw_ellipse.py
src/: gloc_node.cpp  gloc_node1.cpp  gloc_node2.cpp  ploc.m  tubeloc_circle.cpp  tubeloc_example.cpp  tubeloc_node.cpp
